--- a/locale/bn/LC_MESSAGES/messages.po
+++ b/locale/bn/LC_MESSAGES/messages.po
@@ -86,8 +86,8 @@ msgstr ""
 "স্থাপন করতে পারেন।"
 
 #: streamlit_app.py:92
-msgid "# 🗓️ Day"
-msgstr "# 🗓️ দিন"
+msgid "# 🗓️ Which {day_num}"
+msgstr "# 🗓️ দিন {day_num}"
 
 #: streamlit_app.py:97
 msgid "### Figures"
@@ -529,4 +529,7 @@ msgstr ""
 
 #~ msgid "Day"
 #~ msgstr "দিন"
+
+#~ msgid "# 🗓️ Day"
+#~ msgstr "# 🗓️ দিন"
 
