--- a/locale/pl/LC_MESSAGES/messages.po
+++ b/locale/pl/LC_MESSAGES/messages.po
@@ -87,8 +87,8 @@ msgstr ""
 "aplikację za pomocą kilku kliknięć."
 
 #: streamlit_app.py:92
-msgid "# 🗓️ Day"
-msgstr "# 🗓️ Dzień"
+msgid "# 🗓️ Which {day_num}"
+msgstr "# 🗓️ Dzień {day_num}"
 
 #: streamlit_app.py:97
 msgid "### Figures"
@@ -537,4 +537,7 @@ msgstr ""
 
 #~ msgid "Day"
 #~ msgstr "Dzień"
+
+#~ msgid "# 🗓️ Day"
+#~ msgstr "# 🗓️ Dzień"
 
